--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-.marketplace/core/templates/core/base.html
+marketplace/core/templates/core/base.html
 # C extensions
 *.so
 
